--- a/index.html
+++ b/index.html
@@ -4,64 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Happy Lassan Diwas </title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/happy-lassan-diwas/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css"><link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
-<body class="page">
+<body bgcolor="#8CD5FC">
     <div class="header">
         <img src="Images (Lassan)/Click Lassan.png" class="click_lassan" id="lassan_click">
         <button id="changeButton" class="click_to_dance" onclick="changeImage()"></button>
         <p class="heading"><b>Happy Lassan Diwas</b></p>
     </div>
-    <p class="nothing"></p>
     <!-- ---------------- sidebar---------- -->
     <div class="sidebar">
         <div class="shortcut_links">
-            <a href="index"><img src="Images (Lassan)/Home Icon.png" class="home_icon"><p class="home_text"><b>Home</b></p></a>
-            <a href="vector-arts"><img src="Images (Lassan)/Vectors' Logo.png" class="fan_art"><p class="fan_art_text"><b>Fan Art</b></p></a>
-            <a href="cartoon-arts"><img src="Images (Lassan)/Cartoon Logo.png" class="cartoon_art"><p class="cartoon_text"><b>Cartoons</b></p></a>
-            <a href="videos"><img src="Images (Lassan)/Video Camera.png" class="edits"><p class="edits_text"><b>Videos</b></p></a>
-            <a href="series"><img src="Images (Lassan)/Nisflix 1.png" class="series"> <p class="series_text"><b>Series</b></p></a>
-            <a href="links"><img src="Images (Lassan)/Namaste.png" class="links"><p class="links_text"><b>Links</b></p></a>
+            <a href="index.html"><p class="heading_text"><b>Home</b></p></a>
+            <a href="memes.html"><p class="heading_text"><b>Memes</b></p></a>
+            <a href="edits.html"><p class="heading_text"><b>Edits</b></p></a>
+            <a href="fanart.html"><p class="heading_text"><b>Fan Art</b></p></a>
+            <a href="cartoon-arts.html"><p class="heading_text"><b>Cartoons</b></p></a>
+            <a href="links.html"><p class="heading_text"><b>Links</b></p></a>
         </div>
     </div>
     <div class="container">
-        <button class="Lassan_Day_Wish">
-            <div class="wish_text">
-                <p>Soo, if you're on this website, it means that it's finally 17th July 2025, the day we Lassans had been</p>
-                <p>waiting for! Today is the 12th Lassan Diwas (1st one in 2014)! 11 years ago today, Yes Yes Bhai made a</p>
-                <p>decision to start a YouTube channel, and back then he didn't even know how far that decision would</p>
-                <p>take him! His hard work, efforts and consistency bore fruit, and today he has crores of supporters</p>
-                <p>whom he chose to call Lassans! We are so happy Nischay bhaiya, we wish you an ecstatic Lassan Diwas!</p>
-            </div>
-        </button>
+        <div class="sub-container1">
+            <button class="Lassan_Day_Wish">
+                <div class="wish_text">
+                    <p>
+                        Soo, if you're on this website, it means that it's finally 17th July, the day we Lassans had been waiting for!
+                        Today is the 12th Lassan Diwas (1st one in 2014)! 11 years ago today, Yes Yes Bhai made a decision to start a
+                        YouTube channel, and back then he didn't even know how far that decision would take him! His hard work, efforts
+                        and consistency bore fruit, and today he has crores of supporters whom he chose to call Lassans! We are so
+                        happy Nischay bhaiya, we wish you an ecstatic Lassan Diwas! You are the best, we dota you bhraaataa shreeeeee!!
+                        Your Lassans love you always and forever! हाथ नहीं छोड़ना, साथ नहीं छोड़ना!
+                    </p>
+                </div>
+            </button>
+        </div>
         <button class="Hindi_Wish">
             <div class="Hindi_Wish_text">
-                <p>लस्सन दिवस <br> की हृदयगत <br> शुभकामनाये</p>
+                <p><b>लस्सन दिवस की हृदयगत शुभकामनाये</b></p>
             </div>
-        </button>
         <div class="about_website">
-            <button class="about_this_website"><p><b>About This Website</b></p></button>
             <button class="idea">
                 <div class="idea_text">
-                   <p>This year I wanted to do something special for Lassan Diwas that wasn't done by Lassans ever before! So,</p>
-                   <p>I came up with this idea of making a website for Lassan Diwas to shower our love upon you! I asked some</p>
-                   <p>Lassans what they thought about my idea and if they wanted to help, they readily agreed! So today we are</p>
-                   <p>presenting to you a website for you with content like fan art, memes & edits for you! We tried in every way</p>
-                   <p>to keep things wholesome and have been working on this from 31st March, we hope that you enjoy this gift <3</p>
+                    <p>
+                        This year I wanted to do something special for Lassan Diwas that wasn't done by Lassans ever before! So, I came up with this idea of
+                        making a website for Lassan Diwas to shower our love upon you! I asked some Lassans what they thought about my idea and if they
+                        wanted to help, and they agreed! So today we are presenting to you a website for you with content like fan art, memes & edits for you!
+                        We tried in every way to keep things wholesome and have been working on this from 31st March 2024, we hope that you enjoy this gift!
+                        Also, we hope to connect with you on discord, talk, play games like among us & skribbl, only if that's okay with you!
+                    </p>
                 </div>
-                <button class="Lassans_Love_You">
-                    <div class="love_text">
-                        <p>Your Lassans <br> love you always &<br> forever bhaiya! <br><b> हाथ नहीं छोड़ना, <br> साथ नहीं छोड़ना!</b></p>
-                        <img src="Images (Lassan)/Emojis.png" class="emojis_in_text">
-                    </div>
-                </button>
             </button>
         </div>
         <div class="mobile">
             <div class="mobile_header"><p class="mobile_heading"><b>Happy Lassan Diwas</b></p></div>
             <button class="mobile_info"><p class="mobile_info_text">Happy Lassan Diwas everyone, this year we have created a special website for Lassan Diwas! The website has been launched, to view the content please use a laptop or watch Nischay bhaiya's livestream on YouTube!</p></button>
-            <img src="Images (Lassan)/Alternate image.png" class="alternate_img">
+            <img src="images/Nischay Bhaiya 2.jpg" class="alternate_img">
+            <img src="images/Nischay Bhaiya 3.jpg" class="alternate_img2">
         </div>
     </div>
     <script src="script.js"></script>
