--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <!-- ---------------- sidebar---------- -->
     <div class="sidebar">
         <div class="shortcut_links">
-            <a href="index.html"><p class="heading_text"><b>Home</b></p></a>
-            <a href="memes.html"><p class="heading_text"><b>Memes</b></p></a>
-            <a href="edits.html"><p class="heading_text"><b>Edits</b></p></a>
-            <a href="fanart.html"><p class="heading_text"><b>Fan Art</b></p></a>
-            <a href="cartoon-arts.html"><p class="heading_text"><b>Cartoons</b></p></a>
-            <a href="links.html"><p class="heading_text"><b>Links</b></p></a>
+            <a href="index"><p class="heading_text"><b>Home</b></p></a>
+            <a href="vector-arts"><p class="heading_text"><b>Fan Art</b></p></a>
+            <a href="cartoon-arts"><p class="heading_text"><b>Cartoon Vectors</b></p></a>
+            <a href="videos"><p class="heading_text"><b>Videos</b></p></a>
+            <a href="series"><p class="heading_text"><b>Series</b></p></a>
+            <a href="links"><p class="heading_text"><b>Links</b></p></a>
         </div>
     </div>
     <div class="container">
