--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Happy Lassan Diwas </title>
-    <link rel="stylesheet" href="style.css"><link rel="icon" href="/happy-lassan-diwas/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/happy-lassan-diwas/favicon.ico" type="image/x-icon">
 </head>
 <body bgcolor="#8CD5FC">
     <div class="header">
