--- a/vector-arts.html
+++ b/vector-arts.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Fan Arts </title>
     <link rel="stylesheet" href="Fan Art.css">
+    <link rel="icon" href="/happy-lassan-diwas/favicon.ico" type="image/x-icon">
 </head>
 <body bgcolor="#FB8BE5">
     <div class="container1">
