--- a/series.html
+++ b/series.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nisflix Animated Series</title>
     <link rel="stylesheet" href="Series.css">
+    <link rel="icon" href="/happy-lassan-diwas/favicon.ico" type="image/x-icon">
     <script>
         function playPause(btn, vid){
             var vid = document.getElementById(vid);
