--- a/links.html
+++ b/links.html
@@ -6,6 +6,7 @@
     <title>Links</title>
     <div class="header"><p class="heading"><b>Links & Credits To Everyone</b></p></div>
     <link rel="stylesheet" href="Links.css">
+    <link rel="icon" href="/happy-lassan-diwas/favicon.ico" type="image/x-icon">
 </head>
 <body bgcolor="#FB8BE5">
     <div class="sidebar">
