--- a/videos.html
+++ b/videos.html
@@ -6,7 +6,7 @@
     <title> Videos </title>
     <div class="header"> <p class="heading"><b>Videos</b></p> <img src="Images (Lassan)/Heart Hands.png" class="heart_hands"></div>
     <link rel="stylesheet" href="Videos.css">
-    <link rel="icon" href="/happy-lassan-diwas/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://aadya-deshbhakt.github.io/happy-lassan-diwas/favicon.ico" type="image/x-icon">
 </head>
 <body bgcolor="#45B5FF">
     <div class="sidebar">
