Changed discord server link
Changed discord server link

--- a/links.html
+++ b/links.html
@@ -36,7 +36,7 @@
         </button>
         <button class="dands">Our Discord Server & Insta Pages Where The Series Is Available!</button>
         <button class="harmony_server">
-            <a href="https://discord.com/invite/NZffnGqHW9" target="_blank"><img src="Images (Lassan)/Discord Logo.png" class="harmony_logo"></a>
+            <a href="https://discord.com/invite/xJ8teycjNP" target="_blank"><img src="Images (Lassan)/Discord Logo.png" class="harmony_logo"></a>
         </button>
         <button class="series_editors">
             <p class="series_editors_credits"><b><u>Series Editors</u></b></p>
@@ -177,3 +177,4 @@
     </div>
 </body>
 </html>
+
